SONARPY-1745c Update .collect(Collectors.toList()) to .toList()